2015-08-17  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amstatus.pl: Correctly set taper_status

2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/amcryptsimple.pl, common-src/amgpgcrypt.pl: Add sleep to
	  allow gpg-agent to exit
	* server-src/amrestore.pl: Add a --continue-on-filter-error option
	* man/xml-source/amrestore.8.xml: Document --continue-on-filter-error

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* man/xml-source/amrestore.8.xml: Document that -r do not decrypt dump

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix compression computation.

2015-08-10  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Report/human.pm: Fix compression computation.

2015-08-06  Jean-Louis Martineau <martineau@zmanda.com>
	* device-src/s3-device.c: Change default value for S3-MULTI-DELETE
	* man/xml-source/amanda-devices.7.xml: Document it

2015-08-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amdump.pl: Improve debugging.
	* server-src/planner.c: Fix --exact-match argument matching.

2015-08-04  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amvault.pl (usage): Add --src-labelstr
	* man/xml-source/amvault.8.xml: Add --src-labelstr

2015-07-14  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: chown of archive dir when restoring an
	  incr.

2015-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add FULL-WAL property.
	* man/xml-source/ampgsql.8.xml: Document FULL-WAL property.

2015-07-13  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Add 'File shrank by \d* bytes; padding
	  with zeros' as normal message from tar.

2015-06-16  Jean-Louis Martineau <martineau@zmanda.com>
	* perl/Amanda/Changer/robot.pm (verify_unlocked): Reload the state and
	  use eject_unload

2015-06-15  Jean-Louis Martineau <martineau@zmanda.com>