@@ -1,4 +1,13 @@
 2015-08-17  Jean-Louis Martineau <martineau@zmanda.com>
+	* common-src/util.c (interruptible_accept): Take a timeout as
+	  argument
+	* common-src/util.h (interruptible_accept): New prototype
+	* common-src/stream.c (stream_client): Call interruptible_accept with
+	  the timeout argument
+	* xfer-src/element-glue.c (do_directtcp_accept): Call
+	  interruptible_accept with the timeout argument
+
+2015-08-17  Jean-Louis Martineau <martineau@zmanda.com>
 	* server-src/amstatus.pl: Correctly set taper_status
 
 2015-08-11  Jean-Louis Martineau <martineau@zmanda.com>
